--- a/source/index.html
+++ b/source/index.html
@@ -12,37 +12,43 @@
       <header class="header">
         <div class="header__container">
           <div class="header__logo-container">
-            <picture>
-              <source
-                media="(min-width: 1200px)"
-                srcset="./img/logo-desktop.svg"
-              />
-              <source
-                media="(min-width: 768px)"
-                srcset="./img/logo-tablet.svg"
-              />
-              <img
-                src="./img/logo-mobile.svg"
-                alt="Мишка"
-                width="90px"
-                height="40px"
-              />
-            </picture>
+            <div class="header__logo">
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./img/logo-desktop.svg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./img/logo-tablet.svg"
+                />
+                <img
+                  src="./img/logo-mobile.svg"
+                  alt="Мишка"
+                  width="90px"
+                  height="40px"
+                />
+              </picture>
+            </div>
           </div>
           <ul class="header__list">
             <li class="header__item">
-              <a class="header__link" href="#">Каталог товаров</a>
+              <a class="header__link header__item_catalog" href="#"
+                >Каталог товаров</a
+              >
             </li>
-            <li class="header__item">
+            <li class="header__item header__item_order">
               <a class="header__link" href="#">Вязание на заказ</a>
             </li>
-            <li class="header__item">
-              <button class="header__search-button">
-                <span class="visually-hidden">Поиск</span>
+            <li class="header__item header__item_button">
+              <button class="header__search-button" type="button">
+                <span class="header__visually-hidden">Поиск по сайту</span>
               </button>
             </li>
             <li class="header__item">
-              <a class="header__link" href="#">Корзина пока пуста</a>
+              <a class="header__link header__item_cart" href="#"
+                >Корзина пока пуста</a
+              >
             </li>
             <li class="header__item header__item_receipts">
               <a class="header__link" href="#">Новые поступления</a>
