--- a/source/index.html
+++ b/source/index.html
@@ -33,12 +33,12 @@
           </div>
           <ul class="header__list">
             <li class="header__item">
-              <a class="header__link header__item_catalog" href="#"
+              <a class="header__link header__item_catalog" href="catalog.html"
                 >Каталог товаров</a
               >
             </li>
             <li class="header__item header__item_order">
-              <a class="header__link" href="#">Вязание на заказ</a>
+              <a class="header__link" href="form.html">Вязание на заказ</a>
             </li>
             <li class="header__item header__item_button">
               <button class="header__search-button" type="button">
@@ -71,7 +71,7 @@
             работы для дома
           </h1>
           <ul class="menu__list">
-            <li class="menu__item">
+            <li class="menu__item menu__item_objects">
               <a class="menu__link-text">Предметы интерьера</a>
             </li>
             <li class="menu__item menu__item_toys">
