--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,39 +5,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body class="catalog-page">
     <div class="catalog-page__header">
       <header class="header">
-        <div class="header__logo-container">
-          <img src="./img/logo-desktop.svg" alt="Мишка" />
+        <div class="header__container">
+          <div class="header__logo-container">
+            <div class="header__logo">
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./img/logo-desktop.svg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./img/logo-tablet.svg"
+                />
+                <img
+                  src="./img/logo-mobile.svg"
+                  alt="Мишка"
+                  width="90px"
+                  height="40px"
+                />
+              </picture>
+            </div>
+          </div>
+          <ul class="header__list">
+            <li class="header__item">
+              <a class="header__link header__item_catalog" href="catalog.html"
+                >Каталог товаров</a
+              >
+            </li>
+            <li class="header__item header__item_order">
+              <a class="header__link" href="form.html">Вязание на заказ</a>
+            </li>
+            <li class="header__item header__item_button">
+              <button class="header__search-button" type="button">
+                <span class="header__visually-hidden">Поиск по сайту</span>
+              </button>
+            </li>
+            <li class="header__item">
+              <a class="header__link header__item_cart" href="#"
+                >Корзина пока пуста</a
+              >
+            </li>
+            <li class="header__item header__item_receipts">
+              <a class="header__link" href="#">Новые поступления</a>
+            </li>
+            <li class="header__item header__item_sale">
+              <a class="header__link" href="#">Распродажа</a>
+            </li>
+            <li class="header__item header__item_delivery">
+              <a class="header__link" href="#">Бесплатная доставка по России</a>
+            </li>
+          </ul>
         </div>
-        <ul class="header__list">
-          <li class="header__item">
-            <a class="header__link" href="#">Каталог товаров</a>
-          </li>
-          <li class="header__item">
-            <button class="header__search-button"></button>
-          </li>
-          <li class="header__item">
-            <a class="header__link" href="#">Корзина пока пуста</a>
-          </li>
-          <li class="header__item">
-            <a class="header__link" href="#">Новые поступления</a>
-          </li>
-          <li class="header__item">
-            <a class="header__link" href="#">Распродажа</a>
-          </li>
-          <li class="header__item">
-            <a class="header__link" href="#">Бесплатная доставка по России</a>
-          </li>
-        </ul>
-        <h2 class="header__name">Каталог товаров</h2>
+      </header>
       </header>
     </div>
     <main>
       <div class="catalog-page__catalog">
         <section class="catalog">
+          <h1 class="catalog__name">
+            Каталог товаров
+           </h1>
           <ul class="catalog__list">
             <li class="catalog__item">
               <div class="catalog__img-container">
