--- a/source/form.html
+++ b/source/form.html
@@ -10,30 +10,57 @@
   <body class="form-page">
     <div class="form-page__header">
       <header class="header">
-        <div class="header__logo-container">
-          <img src="./img/logo-desktop.svg" alt="Мишка" />
+        <div class="header__container">
+          <div class="header__logo-container">
+            <div class="header__logo">
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./img/logo-desktop.svg"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./img/logo-tablet.svg"
+                />
+                <img
+                  src="./img/logo-mobile.svg"
+                  alt="Мишка"
+                  width="90px"
+                  height="40px"
+                />
+              </picture>
+            </div>
+          </div>
+          <ul class="header__list">
+            <li class="header__item">
+              <a class="header__link header__item_catalog" href="catalog.html"
+                >Каталог товаров</a
+              >
+            </li>
+            <li class="header__item header__item_order">
+              <a class="header__link" href="form.html">Вязание на заказ</a>
+            </li>
+            <li class="header__item header__item_button">
+              <button class="header__search-button" type="button">
+                <span class="header__visually-hidden">Поиск по сайту</span>
+              </button>
+            </li>
+            <li class="header__item">
+              <a class="header__link header__item_cart" href="#"
+                >Корзина пока пуста</a
+              >
+            </li>
+            <li class="header__item header__item_receipts">
+              <a class="header__link" href="#">Новые поступления</a>
+            </li>
+            <li class="header__item header__item_sale">
+              <a class="header__link" href="#">Распродажа</a>
+            </li>
+            <li class="header__item header__item_delivery">
+              <a class="header__link" href="#">Бесплатная доставка по России</a>
+            </li>
+          </ul>
         </div>
-        <ul class="header__list">
-          <li class="header__item">
-            <a class="header__link" href="#">Каталог товаров</a>
-          </li>
-          <li class="header__item">
-            <button class="header__search-button"></button>
-          </li>
-          <li class="header__item">
-            <a class="header__link" href="#">Корзина пока пуста</a>
-          </li>
-          <li class="header__item">
-            <a class="header__link" href="#">Новые поступления</a>
-          </li>
-          <li class="header__item">
-            <a class="header__link" href="#">Распродажа</a>
-          </li>
-          <li class="header__item">
-            <a class="header__link" href="#">Бесплатная доставка по России</a>
-          </li>
-        </ul>
-        <h2 class="header__name">Вязание на заказ</h2>
       </header>
     </div>
     <main>
@@ -222,29 +249,41 @@
     </main>
     <div class="form-page__footer">
       <footer class="footer">
-        <div class="footer__logo-container">
-          <img src="./img/logo-footer.svg" alt="Мишка" />
-        </div>
-        <ul class="footer__social-list">
-          <li class="footer__social-item">
-            <a class="footer__social-link" href="https://www.instagram.com"
-              ><span class="visually-hidden"> Инстаграм </span></a
-            >
-          </li>
-          <li class="footer__social-item">
-            <a class="footer__social-link" href="https://www.facebook.com"
-              ><span class="visually-hidden"> Фейсбук </span></a
-            >
-          </li>
-          <li class="footer__social-item">
-            <a class="footer__social-link" href="https://twitter.com"
-              ><span class="visually-hidden"> Твиттер </span></a
-            >
-          </li>
-        </ul>
-        <p class="footer__text">Разработано</p>
-        <div class="footer__html-img">
-          <img src="./img/logo-htmlacademy.svg" alt="" />
+        <div class="footer__main-container">
+          <div class="footer__social-container">
+            <div class="footer__logo-container">
+              <img src="./img/logo-footer.svg" alt="Мишка" />
+            </div>
+            <ul class="footer__social-list">
+              <li class="footer__social-item">
+                <a
+                  class="footer__social-link footer__social-link_inst"
+                  href="https://www.instagram.com"
+                  ><span class="visually-hidden"> Инстаграм </span></a
+                >
+              </li>
+              <li class="footer__social-item">
+                <a
+                  class="footer__social-link footer__social-link_face"
+                  href="https://www.facebook.com"
+                  ><span class="visually-hidden"> Фейсбук </span></a
+                >
+              </li>
+              <li class="footer__social-item">
+                <a
+                  class="footer__social-link footer__social-link_twit"
+                  href="https://twitter.com"
+                  ><span class="visually-hidden"> Твиттер </span></a
+                >
+              </li>
+            </ul>
+            <div class="footer__html-container">
+              <p class="footer__text">Разработано</p>
+              <div class="footer__html-img">
+                <img src="./img/logo-htmlacademy.svg" alt="Лого" />
+              </div>
+            </div>
+          </div>
         </div>
       </footer>
     </div>
