--- a/source/form.html
+++ b/source/form.html
@@ -64,187 +64,202 @@
       </header>
     </div>
     <main>
-      <div class="form-page__ordering">
-        <section class="ordering">
-          <p class="ordering__text">
-            Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую
-            форму заказа и мы свяжемся с вами, чтобы уточнить детали.
-          </p>
-          <form
-            class="ordering-form ordering__form"
-            method="get"
-            action="https://echo.htmlacademy.ru"
-          >
-            <fieldset class="ordering-form__menu">
-              <legend class="ordering-form__name">Тип</legend>
-              <ul class="ordering-form__list">
-                <li class="ordering-form__item">
-                  <label class="ordering-form__label">
-                    <input
-                      class="ordering-form__input"
-                      type="radio"
-                      name="type"
-                      value="accesory"
-                      checked
-                    />
-                    <span class="ordering-form__radio"></span>
-                    <span class="ordering-form__text">
-                      Украшение для интерьера
-                    </span>
-                  </label>
-                </li>
-                <li class="ordering-form__item">
-                  <label class="ordering-form__label">
-                    <input
-                      class="ordering-form__input"
-                      type="radio"
-                      name="type"
-                      value="toy"
-                    />
-                    <span class="ordering-form__radio"></span>
-                    <span class="ordering-form__text">Детская игрушка</span>
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
-            <fieldset class="ordering-form__menu">
-              <legend class="ordering-form__name">Цвет</legend>
-              <ul class="ordering-form__list">
-                <li class="ordering-form__item">
-                  <label class="ordering-form__label">
-                    <input
-                      class="ordering-form__input"
-                      type="checkbox"
-                      name="white"
-                      checked
-                    />
-                    <span class="ordering-form__box"></span>
-                    <span class="ordering-form__text"> Белый </span></label
-                  >
-                </li>
-                <li class="ordering-form__item">
-                  <label class="ordering-form__label">
-                    <input
-                      class="ordering-form__input"
-                      type="checkbox"
-                      name="gray"
-                      checked
-                    />
-                    <span class="ordering-form__box"></span>
-                    <span class="ordering-form__text"> Серый </span></label
-                  >
-                </li>
-                <li class="ordering-form__item">
-                  <label class="ordering-form__label">
-                    <input
-                      class="ordering-form__input"
-                      type="checkbox"
-                      name="tiffany"
-                    />
-                    <span class="ordering-form__box"></span>
-                    <span class="ordering-form__text"> «Тиффани» </span></label
-                  >
-                </li>
-                <li class="ordering-form__item">
-                  <label class="ordering-form__label">
-                    <input
-                      class="ordering-form__input"
-                      type="checkbox"
-                      name="black"
-                    />
-                    <span class="ordering-form__box"></span>
-                    <span class="ordering-form__text"> Черный </span></label
-                  >
-                </li>
-                <li class="ordering-form__item">
-                  <label class="ordering-form__label">
-                    <input
-                      class="ordering-form__input"
-                      type="checkbox"
-                      name="pink"
-                    />
-                    <span class="ordering-form__box"></span>
-                    <span class="ordering-form__text"> Розовый </span></label
-                  >
-                </li>
-                <li class="ordering-form__item">
-                  <label class="ordering-form__label">
-                    <input
-                      class="ordering-form__input"
-                      type="checkbox"
-                      name="orange"
-                    />
-                    <span class="ordering-form__box"></span>
-                    <span class="ordering-form__text"> Оранжевый </span></label
-                  >
-                </li>
-              </ul>
-            </fieldset>
-            <fieldset class="ordering-form__menu">
-              <legend class="ordering-form__name">фио</legend>
-              <label class="ordering-form__label">
-                <span class="ordering-form__label-text">Имя:</span>
-                <input
-                  type="text"
-                  class="ordering-form__input"
-                  placeholder="Введите ваше имя*"
-                />
-              </label>
-              <label class="ordering-form__label">
-                <span class="ordering-form__label-text">Фамилия:</span>
-                <input
-                  type="text"
-                  class="ordering-form__input"
-                  placeholder="Укажите фамилию*"
-                />
-              </label>
-              <label class="ordering-form__label">
-                <span class="ordering-form__label-text">Отчество:</span>
-                <input
-                  type="text"
-                  class="ordering-form__input"
-                  placeholder="Отчество,если желаете"
-                />
-              </label>
-            </fieldset>
-            <fieldset class="ordering-form__menu">
-              <legend class="ordering-form__name">тел</legend>
-              <label class="ordering-form__label">
-                <input
-                  type="text"
-                  class="ordering-form__input"
-                  placeholder="+7 ХХХ ХХХ ХХ ХХ*"
-                />
-              </label>
-            </fieldset>
-            <fieldset class="ordering-form__menu">
-              <legend class="ordering-form__name">e-mail</legend>
-              <label class="ordering-form__label">
-                <input
-                  type="text"
-                  class="ordering-form__input"
-                  placeholder="Ваш Email*"
-                />
-              </label>
-            </fieldset>
-            <fieldset class="ordering-form__menu">
-              <legend class="ordering-form__name">доп</legend>
-              <label class="ordering-form__label">
-                <textarea
-                  type="text"
-                  class="ordering-form__textarea"
-                  placeholder="Опишите все ваши пожелания к заказу"
-                ></textarea>
-              </label>
-            </fieldset>
-            <div class="ordering__button">
-              <button class="button" type="submit">Отправить заказ</button>
-            </div>
-            <p class="ordering-form__text-description">
-              *Поля обязательны для заполнения
-            </p>
-          </form>
+      <div class="form-page__name">
+        <section class="name">
+          <h1 class="name__name">Вязание на заказ</h1>
         </section>
+      </div>
+      <div class="form-page__ordering">
+        <div class="catalog-container">
+          <section class="ordering">
+            <p class="ordering__text">
+              Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую
+              форму заказа и мы свяжемся с вами, чтобы уточнить детали.
+            </p>
+            <form
+              class="ordering-form ordering__form"
+              method="get"
+              action="https://echo.htmlacademy.ru"
+            >
+              <fieldset class="ordering-form__menu">
+                <legend class="ordering-form__name">Тип</legend>
+                <ul class="ordering-form__list">
+                  <li class="ordering-form__item">
+                    <label class="ordering-form__label">
+                      <input
+                        class="ordering-form__input-radio"
+                        type="radio"
+                        name="type"
+                        value="accesory"
+                        checked
+                      />
+                      <span class="ordering-form__radio"></span>
+                      <span class="ordering-form__text">
+                        Аксессуар для интерьера
+                      </span>
+                    </label>
+                  </li>
+                  <li class="ordering-form__item">
+                    <label class="ordering-form__label">
+                      <input
+                        class="ordering-form__input-radio"
+                        type="radio"
+                        name="type"
+                        value="toy"
+                      />
+                      <span class="ordering-form__radio"></span>
+                      <span class="ordering-form__text">Детская игрушка</span>
+                    </label>
+                  </li>
+                </ul>
+              </fieldset>
+              <fieldset class="ordering-form__menu">
+                <legend class="ordering-form__name">Цвет</legend>
+                <ul class="ordering-form__list">
+                  <li class="ordering-form__item ordering-form__item_color">
+                    <label class="ordering-form__label">
+                      <input
+                        class="ordering-form__input-box"
+                        type="checkbox"
+                        name="white"
+                        checked
+                      />
+                      <span class="ordering-form__box"></span>
+                      <span class="ordering-form__text"> Белый </span></label
+                    >
+                  </li>
+                  <li class="ordering-form__item ordering-form__item_color">
+                    <label class="ordering-form__label">
+                      <input
+                        class="ordering-form__input-box"
+                        type="checkbox"
+                        name="gray"
+                        checked
+                      />
+                      <span class="ordering-form__box"></span>
+                      <span class="ordering-form__text"> Серый </span></label
+                    >
+                  </li>
+                  <li class="ordering-form__item ordering-form__item_color">
+                    <label class="ordering-form__label">
+                      <input
+                        class="ordering-form__input-box"
+                        type="checkbox"
+                        name="tiffany"
+                      />
+                      <span class="ordering-form__box"></span>
+                      <span class="ordering-form__text">
+                        «Тиффани»
+                      </span></label
+                    >
+                  </li>
+                  <li class="ordering-form__item ordering-form__item_color">
+                    <label class="ordering-form__label">
+                      <input
+                        class="ordering-form__input-box"
+                        type="checkbox"
+                        name="black"
+                      />
+                      <span class="ordering-form__box"></span>
+                      <span class="ordering-form__text"> Черный </span></label
+                    >
+                  </li>
+                  <li class="ordering-form__item ordering-form__item_color">
+                    <label class="ordering-form__label">
+                      <input
+                        class="ordering-form__input-box"
+                        type="checkbox"
+                        name="pink"
+                      />
+                      <span class="ordering-form__box"></span>
+                      <span class="ordering-form__text"> Розовый </span></label
+                    >
+                  </li>
+                  <li class="ordering-form__item ordering-form__item_color">
+                    <label class="ordering-form__label">
+                      <input
+                        class="ordering-form__input-box"
+                        type="checkbox"
+                        name="orange"
+                      />
+                      <span class="ordering-form__box"></span>
+                      <span class="ordering-form__text">
+                        Оранжевый
+                      </span></label
+                    >
+                  </li>
+                </ul>
+              </fieldset>
+              <fieldset class="ordering-form__menu">
+                <div class="ordering-form__name-container">
+                  <legend class="ordering-form__name">фио</legend>
+                  <label class="ordering-form__label">
+                    <span class="ordering-form__label-text">Имя:</span>
+                    <input
+                      type="text"
+                      class="ordering-form__input"
+                      placeholder="Введите ваше имя*"
+                    />
+                  </label>
+                  <label class="ordering-form__label">
+                    <span class="ordering-form__label-text">Фамилия:</span>
+                    <input
+                      type="text"
+                      class="ordering-form__input"
+                      placeholder="Укажите фамилию*"
+                    />
+                  </label>
+                  <label class="ordering-form__label">
+                    <span class="ordering-form__label-text">Отчество:</span>
+                    <input
+                      type="text"
+                      class="ordering-form__input"
+                      placeholder="Отчество,если желаете"
+                    />
+                  </label>
+                </div>
+              </fieldset>
+              <div class="ordering-form__contacts-container">
+                <fieldset class="ordering-form__menu">
+                  <legend class="ordering-form__name">тел</legend>
+                  <label class="ordering-form__label">
+                    <input
+                      type="text"
+                      class="ordering-form__input"
+                      placeholder="+7 ХХХ ХХХ ХХ ХХ*"
+                    />
+                  </label>
+                </fieldset>
+                <fieldset class="ordering-form__menu">
+                  <legend class="ordering-form__name">e-mail</legend>
+                  <label class="ordering-form__label">
+                    <input
+                      type="text"
+                      class="ordering-form__input"
+                      placeholder="Ваш Email*"
+                    />
+                  </label>
+                </fieldset>
+              </div>
+              <fieldset class="ordering-form__menu">
+                <legend class="ordering-form__name">доп</legend>
+                <label class="ordering-form__label">
+                  <textarea
+                    type="text"
+                    class="ordering-form__textarea"
+                    placeholder="Опишите все ваши пожелания к заказу"
+                  ></textarea>
+                </label>
+              </fieldset>
+              <p class="ordering-form__text-description">
+                *Поля обязательны для заполнения
+              </p>
+              <div class="ordering__button">
+                <button class="button" type="submit">Отправить заказ</button>
+              </div>
+            </form>
+          </section>
+        </div>
       </div>
     </main>
     <div class="form-page__footer">
